--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,13 @@
     ],
 
     "require": {
-        "php": ">=5.6.4",
-        "illuminate/http": "~5.0"
+        "php": ">=7.2",
+        "illuminate/http": "~6.0"
     },
 
     "require-dev": {
-        "phpunit/phpunit": "~5.0",
-        "orchestra/testbench": "~3.0"
+        "phpunit/phpunit": "^8.0",
+        "orchestra/testbench": "~4.0"
     },
 
     "autoload": {
